# ctrs

./: Cargo.toml  README.md  TODO.md
.github/workflows/: rust.yml
data/: README.md
data/blue_ball/: blue_ball.json
data/blue_ball/projections/: projection0000.tif  projection0001.tif  projection0002.tif  projection0003.tif  projection0004.tif  projection0005.tif  projection0006.tif  projection0007.tif  projection0008.tif  projection0009.tif  projection0010.tif  projection0011.tif  projection0012.tif  projection0013.tif  projection0014.tif  projection0015.tif  projection0016.tif  projection0017.tif  projection0018.tif  projection0019.tif  projection0020.tif  projection0021.tif  projection0022.tif  projection0023.tif  projection0024.tif  projection0025.tif  projection0026.tif  projection0027.tif  projection0028.tif  projection0029.tif  projection0030.tif  projection0031.tif  projection0032.tif  projection0033.tif  projection0034.tif  projection0035.tif  projection0036.tif  projection0037.tif  projection0038.tif  projection0039.tif  (+216 more)
data/rubix/: rubix.json
data/rubix/projections/: projection0000.tif  projection0001.tif  projection0002.tif  projection0003.tif  projection0004.tif  projection0005.tif  projection0006.tif  projection0007.tif  projection0008.tif  projection0009.tif  projection0010.tif  projection0011.tif  projection0012.tif  projection0013.tif  projection0014.tif  projection0015.tif  projection0016.tif  projection0017.tif  projection0018.tif  projection0019.tif  projection0020.tif  projection0021.tif  (+234 more)
src/: ctrs.rs  main.rs
src/ctrs/: scan.rs  scene.rs
(+4 files in other folders)
