[package]
name = "ct-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
iced = { version = "0.13.1", features = [ "tokio" ] }
bytemuck = { version = "1.18.0", features = [ "derive" ] }
serde = { version = "1.0.210", features = [ "derive", "rc" ] }
rfd = { version = "0.15.0", features = [ "xdg-portal" ] }
tokio = { version = "1.40.0", features = [ "fs" ] }
image = "0.25.2"
env_logger = "0.11.5"
iced_wgpu = "0.13.5"
iced_winit = "0.13.0"
log = "0.4.22"
serde_json = "1.0.128"
futures = "0.3.31"
